Bug 988177 - Extract UI to remove bookmarks

--- a/save.html
+++ b/save.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="style/bookmark.css">
+    <link rel="stylesheet" type="text/css" href="style/common.css">
+    <link rel="stylesheet" type="text/css" href="style/save.css">
 
     <!-- Shared code -->
     <script type="text/javascript" src="shared/js/l10n.js"></script>
@@ -14,13 +15,12 @@
     <link rel="stylesheet" type="text/css" href="shared/style_unstable/buttons.css">
     <link rel="stylesheet" type="text/css" href="shared/style/headers.css">
     <link rel="stylesheet" type="text/css" href="shared/style_unstable/input_areas.css">
-    <link rel="stylesheet" type="text/css" href="shared/style/confirm.css">
     <link rel="stylesheet" type="text/css" href="shared/style/status.css">
 
     <!-- Specific code -->
     <script type="text/javascript" defer src="js/bookmark_editor.js"></script>
     <script type="text/javascript" defer src="js/components/status.js"></script>
-    <script type="text/javascript" defer src="js/save-bookmark.js"></script>
+    <script type="text/javascript" defer src="js/activity_handler.js"></script>
 
     <link rel="resource" type="application/l10n" href="locales/locales.ini">
   </head>
