--- a/save.html
+++ b/save.html
@@ -12,9 +12,9 @@
     <script type="text/javascript" defer src="shared/js/url_helper.js"></script>
     <script type="text/javascript" defer src="shared/js/bookmarks_database.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="shared/style_unstable/buttons.css">
+    <link rel="stylesheet" type="text/css" href="shared/style/buttons.css">
     <link rel="stylesheet" type="text/css" href="shared/style/headers.css">
-    <link rel="stylesheet" type="text/css" href="shared/style_unstable/input_areas.css">
+    <link rel="stylesheet" type="text/css" href="shared/style/input_areas.css">
     <link rel="stylesheet" type="text/css" href="shared/style/status.css">
 
     <!-- Specific code -->
