--- a/remove.html
+++ b/remove.html
@@ -13,7 +13,8 @@
     <script type="text/javascript" defer src="js/bookmark_remover.js"></script>
     <script type="text/javascript" defer src="js/activity_handler.js"></script>
 
-    <link rel="manifest" href="manifest.webapp">
+    <meta name="defaultLanguage" content="en-US">
+    <meta name="availableLanguages" content="en-US">
     <link rel="localization" href="locales/bookmark.{locale}.properties">
   </head>
   <body>
