--- a/save.html
+++ b/save.html
@@ -28,7 +28,8 @@
     <script type="text/javascript" defer src="js/components/status.js"></script>
     <script type="text/javascript" defer src="js/activity_handler.js"></script>
 
-    <link rel="manifest" href="manifest.webapp">
+    <meta name="defaultLanguage" content="en-US">
+    <meta name="availableLanguages" content="en-US">
     <link rel="localization" href="locales/bookmark.{locale}.properties">
   </head>
   <body>
