--- a/save.html
+++ b/save.html
@@ -54,6 +54,8 @@
       </form>
       <div id="app-installation" class="hidden">
         <h2><span data-l10n-id="add-application">Add Application</span></h2>
+        <img id="app-icon-placeholder" src="../shared/elements/gaia_grid/images/default_icon.png">
+        <img id="app-icon" class="hidden">
         <p id="app-name"></p>
         <button id="install-app-button" data-l10n-id="add">Add</button>
         <p data-l10n-id="application-available">An application is available for this web site.</p>
