Bug 1148442 - Add support for the W3C icons property to <gaia-grid> r=kgrandon

--- a/save.html
+++ b/save.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" defer src="shared/js/url_helper.js"></script>
     <script type="text/javascript" defer src="shared/js/bookmarks_database.js"></script>
     <script type="text/javascript" defer src="shared/js/font_size_utils.js"></script>
+    <script type="text/javascript" defer src="shared/js/web_manifest_helper.js"></script>
 
     <link rel="stylesheet" type="text/css" href="shared/style/buttons.css">
     <link rel="stylesheet" type="text/css" href="shared/style/headers.css">
@@ -27,7 +28,6 @@
     <script type="text/javascript" defer src="js/bookmark_editor.js"></script>
     <script type="text/javascript" defer src="js/components/status.js"></script>
     <script type="text/javascript" defer src="js/activity_handler.js"></script>
-    <script type="text/javascript" defer src="js/web_manifest_helper.js"></script>
 
     <meta name="defaultLanguage" content="en-US">
     <meta name="availableLanguages" content="en-US">
