--- a/remove.html
+++ b/remove.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="style/common.css">
-    <link rel="stylesheet" type="text/css" href="shared/style/confirm.css">
+    <link rel="stylesheet" type="text/css" href="shared/confirm/confirm.css">
 
-    <script type="text/javascript" src="shared/js/l10n.js"></script>
-    <script type="text/javascript" defer src="shared/js/bookmarks_database.js"></script>
+    <script type="text/javascript" src="shared/l10n/l10n.js"></script>
+    <script type="text/javascript" defer src="shared/bookmarks_database/bookmarks_database.js"></script>
 
     <script type="text/javascript" defer src="js/bookmark_remover.js"></script>
     <script type="text/javascript" defer src="js/activity_handler.js"></script>
