--- a/save.html
+++ b/save.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" type="text/css" href="style/save.css">
 
     <!-- Shared code -->
-    <script type="text/javascript" src="shared/js/l10n.js"></script>
-    <script type="text/javascript" defer src="shared/js/url_helper.js"></script>
-    <script type="text/javascript" defer src="shared/js/bookmarks_database.js"></script>
-    <script type="text/javascript" defer src="shared/js/font_size_utils.js"></script>
-    <script type="text/javascript" defer src="shared/js/web_manifest_helper.js"></script>
-    <script type="text/javascript" defer src="shared/js/icons_helper.js"></script>
+    <script type="text/javascript" src="shared/l10n/l10n.js"></script>
+    <script type="text/javascript" defer src="shared/url_helper/url_helper.js"></script>
+    <script type="text/javascript" defer src="shared/bookmarks_database/bookmarks_database.js"></script>
+    <script type="text/javascript" defer src="shared/font_size_utils/font_size_utils.js"></script>
+    <script type="text/javascript" defer src="shared/web_manifest_helper/web_manifest_helper.js"></script>
+    <script type="text/javascript" defer src="shared/icons_helper/icons_helper.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="shared/style/buttons.css">
-    <link rel="stylesheet" type="text/css" href="shared/style/headers.css">
-    <link rel="stylesheet" type="text/css" href="shared/style/input_areas.css">
-    <link rel="stylesheet" type="text/css" href="shared/style/status.css">
+    <link rel="stylesheet" type="text/css" href="shared/buttons/buttons.css">
+    <link rel="stylesheet" type="text/css" href="shared/headers/headers.css">
+    <link rel="stylesheet" type="text/css" href="shared/input_areas/input_areas.css">
+    <link rel="stylesheet" type="text/css" href="shared/status/status.css">
 
     <!-- Link to component just to copy the default_icon here -->
-    <!-- <script defer src="shared/elements/gaia_grid/script.js"></script> -->
-    <script defer src="shared/elements/gaia_grid/js/grid_icon_renderer.js"></script>
-    <script defer src="shared/js/homescreens/icon.js"></script>
+    <!-- <script defer src="shared/gaia_grid/script.js"></script> -->
+    <script defer src="shared/gaia_grid/js/grid_icon_renderer.js"></script>
+    <script defer src="shared/homescreens/icon/homescreens/icon.js"></script>
 
     <!-- Specific code -->
     <script type="text/javascript" defer src="js/bookmark_editor.js"></script>
@@ -56,7 +56,7 @@
       </form>
       <div id="app-installation" class="hidden">
         <h2><span data-l10n-id="add-application">Add Application</span></h2>
-        <img id="app-icon-placeholder" src="../shared/elements/gaia_grid/images/default_icon.png">
+        <img id="app-icon-placeholder" src="../shared/gaia_grid/images/default_icon.png">
         <img id="app-icon" class="hidden">
         <p id="app-name"></p>
         <button id="install-app-button" data-l10n-id="add">Add</button>
